# tsgap

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py  test_numerical_stability.py
.github/workflows/: python-package.yml
docs/: api.md  benchmarking.md  concepts.md  installation.md  mechanisms.md  patterns.md
examples/: benchmark_imputation.py
paper/: paper.bib  paper.md
ts_missingness/: __init__.py  blocks.py  core.py  mechanisms.py
ts_missingness/tests/: test_missingness.py
tsgap/: __init__.py  core.py  mechanisms.py  patterns.py
tsgap/tests/: test_missingness.py
